# local_llm_codex

./: README.md  pyproject.toml  requirements.txt
ollama_chat/: ___init__.py  cli.py  core.py  db.py  file_ops.py  rag.py  websearch.py
