[project]
name = "ollama_chat"
version = "0.1.0"
description = "Colourful terminal UI for Ollama models with file I/O, web‑search and RAG"
authors = [{name = "Your Name", email = "you@example.com"}]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "httpx>=0.27",
    "rich>=13.7",
    "prompt-toolkit>=3.0",
    "typer>=0.12",
    "sqlalchemy>=2.0",
    "sqlite-utils>=3.36",
    "beautifulsoup4>=4.12",
    "requests>=2.32",
    "sentence-transformers>=2.6",
    "faiss-cpu>=1.8",
]

[project.scripts]
ollama-chat = "ollama_chat.cli:app"
